giro 360 en diseño visual de app tcc

--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -1,7 +1,7 @@
 /* src/layouts/Header.css */
 
 .header {
-    background-color: #b60000;
+    background-color: #660044;
     color: #fff;
     padding: 10px;
     display: flex;
