modificando header logo y links

--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -1,38 +1,43 @@
 /* src/layouts/Header.css */
 
 .header {
-    background-color: #660044;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo {
-    flex: 1;
-  }
-  
-  nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  nav ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  .active {
-    font-weight: bold;
-  }
-  
+  background-color: #660044;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Alinea los elementos a los extremos */
+}
+
+.logo {
+  flex: 1;
+  max-width: 100px; /* Ajusta el ancho máximo del logo */
+}
+
+.logo-image {
+  max-width: 100%; /* Asegura que la imagen del logo se ajuste al ancho del contenedor */
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.active {
+  font-weight: bold;
+}
