--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,30 @@
+/* src/index.css */
+
+/* Resto de estilos */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-bottom: 80px; /* Ajusta esta altura según la altura del footer (en este ejemplo, se asume que el footer tiene 80px de altura) */
 }
+
+.footer {
+  background-color: rgba(0, 0, 0, 0.5); /* Cambiar el color de fondo a uno con transparencia */
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px; /* Ajusta la altura del footer según tus necesidades */
+  position: absolute; /* Cambiar la posición del footer a absoluta */
+  bottom: 0; /* Fijar el footer al final de la página */
+  width: 100%; /* Asegurar que el footer ocupe todo el ancho de la página */
+  z-index: 1; /* Asegurar que el footer se muestre por encima del contenido del body */
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
